--- a/npcs.html
+++ b/npcs.html
@@ -153,7 +153,7 @@
         <h2>Taoulorn</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/zodan.PNG" alt="Zodan">
+                <img src="imagens/zodan.png" alt="Zodan">
                 <div class="npc-description">
                     <h3>Zodan</h3>
                     <p><i>O velho que sabe muito.</i></p>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="npc-card">
-                <img src="imagens/kamorsha.PNG" alt="Kamorsha">
+                <img src="imagens/kamorsha.png" alt="Kamorsha">
                 <div class="npc-description">
                     <h3>Kamorsha</h3>
                     <p>Molher</p>
@@ -169,7 +169,7 @@
             </div>
 
             <div class="npc-card">
-                <img src="imagens/DaoMa.PNG" alt="Dao Ma">
+                <img src="imagens/DaoMa.png" alt="Dao Ma">
                 <div class="npc-description">
                     <h3>Dao Ma</h3>
                     <p>Biao Ren</p>
@@ -183,7 +183,7 @@
         <h2>Albrunz</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/DaoMa.PNG" alt="Dao Ma">
+                <img src="imagens/DaoMa.png" alt="Dao Ma">
                 <div class="npc-description">
                     <h3>Dao Ma</h3>
                     <p>Biao Ren</p>
@@ -191,7 +191,7 @@
             </div>
 
             <div class="npc-card">
-                <img src="imagens/JosuVess.PNG" alt="JosuVess">
+                <img src="imagens/JosuVess.png" alt="JosuVess">
                 <div class="npc-description">
                     <h3>O Bruxador</h3>
                     <p>O Destino final de todas as coisas</p>
