--- a/npcs.html
+++ b/npcs.html
@@ -163,23 +163,23 @@
             <div class="npc-card">
                 <img src="imagens/kamorsha.png" alt="Kamorsha">
                 <div class="npc-description">
-                    <h3>Kamorsha</h3>
+                    <h3>Velmora</h3>
                     <p>Molher</p>
                 </div>
             </div>
 
-            <div class="npc-card">
+            <!-- <div class="npc-card">
                 <img src="imagens/DaoMa.png" alt="Dao Ma">
                 <div class="npc-description">
                     <h3>Dao Ma</h3>
                     <p>Biao Ren</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
     <!-- Albrunz -->
-    <div class="npc-group">
+    <!-- <div class="npc-group">
         <h2>Albrunz</h2>
         <div class="npc-grid">
             <div class="npc-card">
@@ -197,8 +197,8 @@
                     <p>O Destino final de todas as coisas</p>
                 </div>
             </div>
-        </div>
-    </div>
+        </div> -->
+    <!-- </div> -->
 
 </body>
 </html>
