Mudanda de guias

--- a/home.html
+++ b/home.html
@@ -133,9 +133,9 @@
     <div>
         <h1>⚜ Metallum ⚜</h1>
         <div class="card"><a href="mapa.html">🗺️ Mapa</a></div>
-        <div class="card"><a href="personagens.html">⚔️ Personagens</a></div>
+        <div class="card"><a href="personagens.html">⚔️ Fichas</a></div>
 <!--        <div class="card"><a href="itens_magicos.html">🔮 Itens Mágicos</a></div>-->
-        <div class="card"><a href="npcs.html">🏰 NPCs</a></div>
+        <div class="card"><a href="npcs.html">🏰 Personagens</a></div>
 
         <!-- contador agora vem logo abaixo dos nomes -->
         <div class="countdown">
