--- a/npcs.html
+++ b/npcs.html
@@ -144,37 +144,37 @@
         <h2>Jogadores</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/argonpx.png" alt="Argon">
+                <img src="imagens/Argonpx.png" alt="Argon">
                 <div class="npc-description"><h3>Argon</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/alan.png" alt="Alan Berrola">
+                <img src="imagens/Alan.png" alt="Alan Berrola">
                 <div class="npc-description"><h3>Alan Berrola</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/josuvess.png" alt="Josu Vess">
+                <img src="imagens/JosuVess.png" alt="Josu Vess">
                 <div class="npc-description"><h3>Josu Vess</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/erato.png" alt="Erato">
+                <img src="imagens/Erato.png" alt="Erato">
                 <div class="npc-description"><h3>Erato</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/tobiastoko.png" alt="Tobias Toko">
+                <img src="imagens/TobiasToko.png" alt="Tobias Toko">
                 <div class="npc-description"><h3>Tobias Toko</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/jjjj.png" alt="Jonathan Jonas Jorlan Júnior">
+                <img src="imagens/JJJJ.png" alt="Jonathan Jonas Jorlan Júnior">
                 <div class="npc-description"><h3>Jonathan Jonas Jorlan Júnior</h3></div>
             </div>
 
             <div class="npc-card">
-                <img src="imagens/granolapx.png" alt="Granola">
+                <img src="imagens/Granolapx.png" alt="Granola">
                 <div class="npc-description"><h3>Granola</h3></div>
             </div>
         </div>
