--- a/npcs.html
+++ b/npcs.html
@@ -159,7 +159,7 @@
             </div>
 
             <div class="npc-card">
-                <img src="imagens/Erato.png" alt="Erato">
+                <img src="imagens/Eratopx.png" alt="Erato">
                 <div class="npc-description"><h3>Erato</h3></div>
             </div>
 
