--- a/npcs.html
+++ b/npcs.html
@@ -146,26 +146,31 @@
             <div class="npc-card">
                 <img src="imagens/Argonpx.png" alt="Argon">
                 <div class="npc-description"><h3>Argon</h3></div>
+                <p><i>"Eu, da sensibilidade doentia, digo que sentir é preciso, mas que não é preciso viver."</i></p>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/Alan.png" alt="Alan Berrola">
                 <div class="npc-description"><h3>Alan Berrola</h3></div>
+                <p><i>"Ou prata ou chumbo!"</i></p>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/JosuVess.png" alt="Josu Vess">
                 <div class="npc-description"><h3>Josu Vess</h3></div>
+                <p><i>"O destino final de todas as coisas".</i></p>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/Eratopx.png" alt="Erato">
                 <div class="npc-description"><h3>Erato</h3></div>
+                <p><i>"Ancient forest of giant trees, with vicious arcane monsters prowling about."</i></p>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/TobiasToko.png" alt="Tobias Toko">
                 <div class="npc-description"><h3>Tobias Toko</h3></div>
+                <p><i>"Ó o Caba alí!"</i></p>
             </div>
 
             <div class="npc-card">
@@ -176,6 +181,7 @@
             <div class="npc-card">
                 <img src="imagens/Granolapx.png" alt="Granola">
                 <div class="npc-description"><h3>Granola</h3></div>
+                <p><i>Granolando...</i></p>
             </div>
         </div>
     </div>
@@ -186,6 +192,7 @@
             <div class="npc-card">
                 <img src="imagens/crow.png" alt="Argon">
                 <div class="npc-description"><h3>Argon</h3></div>
+                <p><i>Cocoricó?!</i></p>
             </div>
         </div>
     </div>
