--- a/npcs.html
+++ b/npcs.html
@@ -190,8 +190,8 @@
         <h2>Companions</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/crow.png" alt="Argon">
-                <div class="npc-description"><h3>Argon</h3></div>
+                <img src="imagens/crow.png" alt="Crow de Argon">
+                <div class="npc-description"><h3>Crow</h3></div>
                 <p><i>Cocoricó?!</i></p>
             </div>
         </div>
