--- a/npcs.html
+++ b/npcs.html
@@ -145,26 +145,30 @@
         <div class="npc-grid">
             <div class="npc-card">
                 <img src="imagens/Argonpx.png" alt="Argon">
-                <div class="npc-description"><h3>Argon</h3></div>
+                <div class="npc-description"><h3>Argon</h3>
                 <p><i>"Eu, da sensibilidade doentia, digo que sentir é preciso, mas que não é preciso viver."</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/Alan.png" alt="Alan Berrola">
-                <div class="npc-description"><h3>Alan Berrola</h3></div>
+                <div class="npc-description"><h3>Alan Berrola</h3>
                 <p><i>"Ou prata ou chumbo!"</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/JosuVess.png" alt="Josu Vess">
-                <div class="npc-description"><h3>Josu Vess</h3></div>
+                <div class="npc-description"><h3>Josu Vess</h3>
                 <p><i>"O destino final de todas as coisas".</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/Eratopx.png" alt="Erato">
-                <div class="npc-description"><h3>Erato</h3></div>
+                <div class="npc-description"><h3>Erato</h3>
                 <p><i>"Ancient forest of giant trees, with vicious arcane monsters prowling about."</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
@@ -175,13 +179,16 @@
 
             <div class="npc-card">
                 <img src="imagens/JJJJ.png" alt="Jonathan Jonas Jorlan Júnior">
-                <div class="npc-description"><h3>Jonathan Jonas Jorlan Júnior</h3></div>
+                <div class="npc-description"><h3>Jonathan Jonas Jorlan Júnior</h3>
+                <p><i>Tenso...</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/Granolapx.png" alt="Granola">
-                <div class="npc-description"><h3>Granola</h3></div>
+                <div class="npc-description"><h3>Granola</h3>
                 <p><i>Granolando...</i></p>
+                </div>
             </div>
         </div>
     </div>
@@ -191,8 +198,9 @@
         <div class="npc-grid">
             <div class="npc-card">
                 <img src="imagens/crow.png" alt="Crow de Argon">
-                <div class="npc-description"><h3>Crow</h3></div>
+                <div class="npc-description"><h3>Crow</h3>
                 <p><i>Cocoricó?!</i></p>
+                </div>
             </div>
         </div>
     </div>
