--- a/npcs.html
+++ b/npcs.html
@@ -167,14 +167,15 @@
             <div class="npc-card">
                 <img src="imagens/Eratopx.png" alt="Erato">
                 <div class="npc-description"><h3>Erato</h3>
-                <p><i>"Ancient forest of giant trees, with vicious arcane monsters prowling about."</i></p>
+                <p><i>"Onde outros ergueram muralhas, ele enraizou esperança. E no silêncio das folhas azuis, ainda sussurra o preço da salvação."</i></p>
                 </div>
             </div>
 
             <div class="npc-card">
                 <img src="imagens/TobiasToko.png" alt="Tobias Toko">
-                <div class="npc-description"><h3>Tobias Toko</h3></div>
+                <div class="npc-description"><h3>Tobias Toko</h3>
                 <p><i>"Ó o Caba alí!"</i></p>
+                </div>
             </div>
 
             <div class="npc-card">
