--- a/npcs.html
+++ b/npcs.html
@@ -198,7 +198,7 @@
         <h2>Companions</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/crow.png" alt="Crow de Argon">
+                <img src="imagens/Argonpx.png" alt="Crow de Argon">
                 <div class="npc-description"><h3>Crow</h3>
                 <p><i>Cocoricó?!</i></p>
                 </div>
