--- a/npcs.html
+++ b/npcs.html
@@ -195,10 +195,10 @@
     </div>
 
     <div class="npc-group">
-        <h2>Companions</h2>
+        <h2>Companheiros</h2>
         <div class="npc-grid">
             <div class="npc-card">
-                <img src="imagens/Argonpx.png" alt="Crow de Argon">
+                <img src="imagens/crowpx.png" alt="Crow de Argon">
                 <div class="npc-description"><h3>Crow</h3>
                 <p><i>Cocoricó?!</i></p>
                 </div>
