--- a/npcs.html
+++ b/npcs.html
@@ -238,6 +238,20 @@
         </div>
     </div>
 
+<div class="npc-group">
+        <h2>Teste</h2>
+        <div class="npc-grid">
+            <div class="npc-card">
+                <img src="imagens/DaoMa.png" alt="Dao Ma">
+                <div class="npc-description">
+                    <h3>Dao Ma</h3>
+                    <p>Biao Ren</p>
+                 </div>
+             </div>
+        </div>
+    </div>
+
+    
 <!--    &lt;!&ndash; Albrunz &ndash;&gt;-->
 <!--    <div class="npc-group">-->
 <!--        <h2>Albrunz</h2>-->
