--- a/npcs.html
+++ b/npcs.html
@@ -224,7 +224,7 @@
                 <img src="imagens/Velmora.png" alt="Velmora">
                 <div class="npc-description">
                     <h3>Velmora</h3>
-                    <p>Molher</p>
+                    <p><i>Molher!</i></p>
                 </div>
             </div>
 
@@ -244,8 +244,8 @@
             <div class="npc-card">
                 <img src="imagens/DaoMa.png" alt="Dao Ma">
                 <div class="npc-description">
-                    <h3>Dao Ma</h3>
-                    <p>Biao Ren</p>
+                    <h3>Homem do Chapéu</h3>
+                    <p><i>Hesitação é derrota!</i></p>
                  </div>
              </div>
         </div>
