--- a/npcs.html
+++ b/npcs.html
@@ -84,10 +84,10 @@
             box-shadow: 0 3px 10px rgba(0,0,0,0.5);
         }
 
-        .npc-card:hover {
+        /* .npc-card:hover {
             transform: scale(1.02);
             box-shadow: 0 6px 20px rgba(0,0,0,0.6);
-        }
+        } */
 
         .npc-card img {
             width: 100px;
@@ -254,64 +254,14 @@
                 <img src="imagens/tiferina.png" alt="tiferina">
                 <div class="npc-description">
                     <h3>Hikari no naka</h3>
-                    <p><i>[Verse 1]
-　蝉時雨　近くて遠い　影法師
-　記憶の隙間で　香る夏の
-　幼さを語る　その瞬間さえ
-　refrain... a fragile grace, never fade
-
-[Pre-Chorus 1]
-　背伸びした声で　隠したけど
-　子供の心は　揺れたまま
-　切なくて　哀しいのに
-　どうして　少し心地いい
-
-[Chorus 1]
-　忘れたいのに　まだ疼く
-　胸の奥で　ざらつく呼吸
-　言えないままに　滲む言葉
-　手のひらから　こぼれ落ちた
-
-　──残光の中　夢の残照
-
-[Verse 2]
-　夕焼けに　滲んで消える　白い息
-　胸裏の奥で　揺れる余熱
-　名もなき想いに　触れた指先
-　echoes... a fleeting truth, never gone
-
-[Pre-Chorus 2]
-　無理に大人へと　歩こうとして
-　こぼれた涙は　隠せなくて
-　切なくて　哀しいほど
-　君だけ　まだ胸にいる
-
-[Chorus 2]
-　失くしたくない　まだ疼く
-　指のすき間　揺れるぬくもり
-　答えを探す　夜のざわめき
-　声にならず　ただ響いた
-
-　──残光の中　夢の残照
-
-[Bridge]
-　あぁ　影に飲み込まれていく
-　Fading like an echo in the afterglow
-　──夏の残像に　君を重ねて
-
-[Final Chorus]
-　忘れたくても　まだ疼く
-　未来さえも　曖昧にして
-　抗えぬまま　抱き寄せた影
-　胸の奥で　揺れ続ける
-
-　──残光の中
-　──残光の中
-　──残光の中
-
-[Outro]
-　I smile with tears…
-　静かな風に　揺れる refrain</i></p>
+                    <p><i>Redonda ela é, porém plana,
+                        como uma tábua sagrada —
+                        altar dos senhores lupinos.
+                        
+                        Joia em veludo negro,
+                        pérola no mar inalterada,
+                        porém sempre mutável,
+                        eterna em sua face prateada.</i></p>
                  </div>
              </div>
             
