--- a/npcs.html
+++ b/npcs.html
@@ -253,14 +253,14 @@
             <div class="npc-card">
                 <img src="imagens/tiferina.png" alt="tiferina">
                 <div class="npc-description">
-                    <h3>Hikari no naka</h3>
-                    <p><i>Redonda ela é, porém plana,
-                        como uma tábua sagrada —
-                        altar dos senhores lupinos.
-                        
-                        Joia em veludo negro,
-                        pérola no mar inalterada,
-                        porém sempre mutável,
+                    <h3>Tsuki</h3>
+                    <p><i>Redonda ela é, porém plana,<br>
+                        como uma tábua sagrada —<br>
+                        altar dos senhores lupinos.<br><br>
+                
+                        Joia em veludo negro,<br>
+                        pérola no mar inalterada,<br>
+                        porém sempre mutável,<br>
                         eterna em sua face prateada.</i></p>
                  </div>
              </div>
