--- a/npcs.html
+++ b/npcs.html
@@ -255,7 +255,7 @@
                 <div class="npc-description">
                     <h3>Tsuki</h3>
                     <p><i>Redonda ela é, porém plana,<br>
-                        como uma tábua sagrada —<br>
+                        como uma tábua sagrada,<br>
                         altar dos senhores lupinos.<br><br>
                 
                         Joia em veludo negro,<br>
