--- a/npcs.html
+++ b/npcs.html
@@ -179,9 +179,9 @@
             </div>
 
             <div class="npc-card">
-                <img src="imagens/JJJJ.png" alt="Jonathan Jonas Jorlan Júnior">
-                <div class="npc-description"><h3>Jonathan Jonas Jorlan Júnior</h3>
-                <p><i>Tenso...</i></p>
+                <img src="imagens/Cramunhao.png" alt="Jonathan Jonas Jorlan Júnior">
+                <div class="npc-description"><h3>O Cramunhão</h3>
+                <p><i>Tá achando que é fácil ser chifrudo?</i></p>
                 </div>
             </div>
 
