--- a/npcs.html
+++ b/npcs.html
@@ -251,7 +251,7 @@
              </div>
 
             <div class="npc-card">
-                <img src="imagens/tiferina.png" alt="tiferina">
+                <img src="imagens/Hardin.png" alt="tiferina">
                 <div class="npc-description">
                     <h3>Tsuki</h3>
                     <p><i>Redonda ela é, porém plana,<br>
