--- a/npcs.html
+++ b/npcs.html
@@ -160,7 +160,7 @@
             <div class="npc-card">
                 <img src="imagens/JosuVess.png" alt="Josu Vess">
                 <div class="npc-description"><h3>Josu Vess</h3>
-                <p><i>"O destino final de todas as coisas".</i></p>
+                <p><i>"O destino final de todas as coisas..."</i></p>
                 </div>
             </div>
 
@@ -253,7 +253,7 @@
             <div class="npc-card">
                 <img src="imagens/Hardin.png" alt="tiferina">
                 <div class="npc-description">
-                    <h3>Tsuki</h3>
+                    <h3>Hardin</h3>
                     <p><i>Redonda ela é, porém plana,<br>
                         como uma tábua sagrada,<br>
                         altar dos senhores lupinos.<br><br>
