--- a/npcs.html
+++ b/npcs.html
@@ -276,9 +276,9 @@
              </div>
 
             <div class="npc-card">
-                <img src="imagens/Hardin.png" alt="tiferina">
+                <img src="imagens/Mawt.png" alt="Chacal">
                 <div class="npc-description">
-                    <h3>Hardin</h3>
+                    <h3>Chacal</h3>
                     <p><i>Redonda ela é, porém plana,<br>
                         como uma tábua sagrada,<br>
                         altar dos senhores lupinos.<br><br>
